# unified-llm-client-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/unified-llm/: Cargo.toml
crates/unified-llm-types/: Cargo.toml
crates/unified-llm-types/src/: catalog.rs  config.rs  content.rs  conversions.rs  error.rs  generate.rs  lib.rs  message.rs  provider.rs  request.rs  response.rs  stream.rs  tool.rs
crates/unified-llm/examples/: basic_generate.rs  multi_provider.rs  multi_turn.rs  provider_fallback.rs  streaming.rs  structured_output.rs  tool_calling.rs
crates/unified-llm/src/: catalog.json  catalog_data.rs  client.rs  default_client.rs  lib.rs  middleware.rs  testing.rs
crates/unified-llm/src/api/: generate.rs  generate_object.rs  generate_types.rs  mod.rs  stream.rs  stream_object.rs  tool_loop.rs  types.rs
crates/unified-llm/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_compat.rs
crates/unified-llm/src/util/: http.rs  image.rs  mod.rs  provider_options.rs  retry.rs  sse.rs  stream_accumulator.rs  stream_lifecycle.rs
crates/unified-llm/tests/: compliance_harness.rs  conformance.rs  multimodal.rs  phase1_anthropic.rs  phase2_gemini.rs  phase2_openai.rs  phase_openai_compat.rs  smoke_test.rs
