[package]
name = "unified-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
unified-llm-types = { path = "../unified-llm-types" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures = "0.3"
futures-core = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
mime_guess = "2"
rand = "0.8"
async-stream = "0.3"
jsonschema = "0.28"
once_cell = "1"
arc-swap = "1"
httpdate = "1"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
base64 = "0.22"

[features]
default = ["openai", "anthropic", "gemini"]
openai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
gemini = ["dep:reqwest"]
openai-compat = ["dep:reqwest"]
testing = []
